import java.util.*;

public interface EstrategiaPremio {
    Cliente elegirGanador(List<Cliente> clientes);
}
