public interface MailSender {
    void enviarMail(String mail, String titulo, String mensaje);
}
